--- a/src/weui.less
+++ b/src/weui.less
@@ -1,3 +1,4 @@
+@import "icon/minui-icon.less";
 @import "base/reset.less";
 @import "widget/weui-cell/weui-cell.less";
 @import "widget/weui-cell/weui-access.less";
