--- a/app/example/icons/icons.wxss
+++ b/app/example/icons/icons.wxss
@@ -26,3 +26,18 @@ icon{
     margin-top: 10px;
     text-align: left;
 }
+
+.minui_icon_list {
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+}
+.icon_item_demo {
+  width: 20%;
+  float: left;
+  margin-bottom: 10rpx;
+}
+.icon_type {
+  display: block;
+  font-size: 22rpx;
+}
