--- a/src/base/variable/weui-dialog.less
+++ b/src/base/variable/weui-dialog.less
@@ -1,5 +1,5 @@
 @weuiDialogBackgroundColor: #FFFFFF;
 @weuiDialogLineColor: #D5D5D6;
-@weuiDialogLinkColor: #3CC51F;
+@weuiDialogLinkColor: @weuiColorPrimary;
 @weuiDialogLinkActiveBc: #EEEEEE;
 @weuiDialogGapWidth: 1.6em;
