--- a/src/base/variable/color.less
+++ b/src/base/variable/color.less
@@ -18,3 +18,7 @@
 @weuiTextColorTips: #B2B2B2;
 @weuiTextColorWarn: @weuiColorWarn;
 @weuiTextColorGray: #999999;
+
+
+// navbar
+@weuiNavBarColor: @weuiColorPrimary;
